Fixed wrap problem. Syntax error

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@ h1,h2,h3 {
 	flex-direction: column;
 }
 
-.flexd-wrap {
+.flex-wrap {
 	flex-wrap: wrap;
 }
 
@@ -211,7 +211,7 @@ min-height: 100vh;
 }
 
 .div-whatdo {
-	padding: 50px;
+	padding: 20px;
 }
 
 .div-whatdo > .p {
@@ -221,17 +221,28 @@ min-height: 100vh;
 
 .badges {
   margin: 75px 0 0 0;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
-.badges > i {
-	font-size: 85px;
-	margin: 0 30px 0 0;
+.badges > div  {
+	margin-top: 35px;
+	display: flex;
+	justify-content: center;
+}
+
+.badges > div > i {
+	font-size: 65px;
+	padding: 10px 15px 0 15px;
 }
 
 /* products */
 
 .products-container {
 	background-color: #ffffff;
+	min-height: 100vh;
+	margin-top: 100px;
+	margin-top: 100px;
 
 }
 
